# paperweave

./: .dockerignore  .env.example  .gitignore  BLOG_POST.md  Makefile  README.md  generate_arch_diagram.py  pyproject.toml
backend/: README.md
backend/app/: __init__.py  main.py
benchmarks/: README.md
configs/: README.md  base.yaml  graphrag_server_config.template.json
data/: README.md
data/eval_questions/: benchmark_questions.json
docker/: README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: api.md  architecture.md  benchmark-guide.md  dataset-guide.md  setup.md
evaluation/: __init__.py  bertscore_eval.py  dataset.py  judge.py  metrics.py  reporting.py
evaluation/datasets/: graphrag_favor_10.json  hackathon_eval.json  local_arxiv_eval_60.json  sample_scientific_qa.json  scientific_qa_template.json
evaluation/outputs/: bertscore_results.json  judge_results.json  leaderboard.csv  leaderboard.json
evaluation/reports/: summary_report.md
evaluations/: README.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: page.tsx  (+2 more)
graphrag/: README.md
reports/: README.md
scripts/: README.md  backfill_graphrag_chunk_embeddings.py  benchmark_all.py  build_basic_rag.py  create_eval_dataset_template.py  download_arxiv_papers.py  evaluate_answers.py  generate_eval_questions.py  generate_local_eval_dataset.py  ingest_graphrag.py  parse_pdfs_builtin.py  parse_with_opendataloader.py  run_basic_rag.py  run_benchmark.py  run_graphrag.py  run_llm_only.py  test_basic_rag.py
(+229 files in other folders)
