[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperweave"
version = "0.1.0"
description = "PaperWeave benchmark system for LLM-only, Basic RAG, and TigerGraph GraphRAG."
requires-python = ">=3.11"
dependencies = [
  "arxiv>=2.1.3",
  "bert-score>=0.3.13",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "chromadb>=0.5.23",
  "langchain>=0.3.14",
  "langchain-chroma>=0.1.4",
  "langchain-community>=0.3.14",
  "langchain-ollama>=0.2.2",
  "langchain-text-splitters>=0.3.4",
  "matplotlib>=3.9.0",
  "numpy>=2.1.0",
  "orjson>=3.10.0",
  "pandas>=2.2.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.5.2",
  "pymupdf>=1.24.10",
  "pyyaml>=6.0.2",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.12",
  "sentence-transformers>=3.0.1",
  "tenacity>=9.0.0",
  "tiktoken>=0.8.0",
  "tqdm>=4.66.5",
  "uvicorn[standard]>=0.30.6",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
